# MaSzyna-API-wrapper

./: .clang-tidy  .clang-tidy-actions  .clangd  .gitignore  .gitmodules  .vimrc  AGENTS.md  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  SConstruct  docker-compose.yml  qodana.yaml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/scripts/: parse_tidy_output.py
.github/workflows/: .clang-tidy  build.yaml  clang-tidy-checks.yaml  clang-tidy.yaml  clang-tidy.yml  codeql.yml  qodana.yaml  tests.yml
addons/libmaszyna/: action_queue.gd  e3d_model_instance_manager.gd  file_utils.gd.uid  libmaszyna.gd  libmaszyna.gd.uid  libmaszyna.gdextension  libmaszyna.gdextension.uid  libmaszyna_runtime.gd  libmaszyna_runtime.gd.uid  maszyna_gut_test.gd  maszyna_gut_test.gd.uid  maszyna_switch_3d.gd  maszyna_switch_3d.gd.uid  maszyna_track_3d.gd  powered_train_part.gd  rail_vehicle_3d.gd  rail_vehicle_3d.gd.uid  track_3d.gd  track_3d.gd.uid  train_3d.gd  train_3d.gd.uid  train_set_3d.gd  train_set_node.gd  train_set_node.gd.uid  user_settings.gd
ci/: filter-cc.py  generate_cmakelists.sh  test-hotreload.sh
ci/docker/: Dockerfile_BuildTools  entrypoint.sh
ci/qodana/: generate_cmakelists.sh
demo/: FreeCamera.gd  cabin_demo.tscn  conditional.gd  conditional.gd.uid  debug_panel.gd  debug_panel.tscn  debug_switch.gd  debug_switch.tscn  default_bus_layout.tres  demo.gd  demo.tscn  demo_3d.gd  demo_3d.gd.uid  demo_3d.tscn  demo_scenery_loading.gd  demo_scenery_loading.gd.uid  demo_scenery_loading.tscn  export_presets.cfg  gauge.gd  globals.gd.uid  mover_gauges.gd  mover_gauges.tscn  mover_switches.gd  mover_switches.tscn  powered_train_part.gd  project.godot  sm_42v_1.tscn  train_car.gd.uid  train_set.gd.uid  train_set_test.gd  train_set_test.gd.uid  train_set_test.tscn
demo/e3d_models/: dzik.e3d  dzik.e3d.uid  jezewo_budynekstacyjny.e3d  jezewo_budynekstacyjny.e3d.uid
demo/examples/: cabin_demo.tscn  cabin_interior_lights.gd  custom_brakes_component.gd  custom_brakes_component.gd.uid  custom_powered_train_part.gd  custom_powered_train_part.gd.uid  custom_powered_train_part.tscn  custom_train_part.gd  custom_train_part.gd.uid  custom_train_part.tscn  entity_test.gd  entity_test.gd.uid  entity_test.tscn  example_train.tscn  mover_demo.gd  mover_demo.gd.uid  mover_demo.tscn  powered_train_part_example.gd  powered_train_part_example.gd.uid
demo/hud/: button.gd  button.gd.uid  button.tscn  debug_hud.gd  debug_hud.gd.uid  debug_hud.tscn  gauge.gd.uid  gauge.gdshader.uid  gauge.tscn  knob.gd  knob.gd.uid  knob.tscn  legacy_railvehicle_debug_panel.gd  legacy_railvehicle_debug_panel.tscn  light.gd.uid  light.tscn  mover_gauges.gd  mover_gauges.gd.uid  mover_gauges.tscn  mover_switches.gd  mover_switches.gd.uid  mover_switches.tscn  mover_switches_brakes.tscn  mover_switches_diesel.tscn  mover_switches_doors.tscn  mover_switches_general.gd  mover_switches_general.gd.uid  mover_switches_general.tscn  mover_switches_section.gd  mover_switches_section.gd.uid  mover_switches_security.tscn  panel.gd  panel.gd.uid  panel.tscn  railvehicle_3d_debug_panel.gd  railvehicle_3d_debug_panel.gd.uid  railvehicle_3d_debug_panel.tscn  switch.gd  switch.gd.uid  switch.tscn  (+7 more)
demo/loading_screen/: loading_screen.gd  loading_screen.gd.uid  loading_screen.gdshader.uid  loading_screen.tscn
demo/materials/: custom_demo_ground.tres  head_display.gdshader  head_display.gdshader.uid
demo/sound_test/: sound_test.gd  sound_test.gd.uid  sound_test.tscn
demo/sounds/: hasler.tres  hasler_fade_in_curve.tres  hasler_fade_out_curve.tres
demo/tests/: sm42_controller.tscn  test_console_focus.gd  test_console_focus.gd.uid  test_e3d_lights_state.gd  test_e3d_lights_state.gd.uid  test_e3d_model_node_path.gd  test_e3d_model_node_path.gd.uid  test_e3d_model_tool.gd  test_e3d_model_tool.gd.uid  test_material_manager_variants.gd  test_material_manager_variants.gd.uid  test_nodebank_library_builder.gd  test_nodebank_library_builder.gd.uid  test_rail_vehicle_lights.gd  test_rail_vehicle_lights.gd.uid  test_rail_vehicle_physics_server.gd  test_rail_vehicle_physics_server.gd.uid  test_rail_vehicle_track_movement.gd  test_rail_vehicle_track_movement.gd.uid  test_sm42_startup_sequence.gd  test_sm42_startup_sequence.gd.uid  test_spatial_index.gd  test_spatial_index.gd.uid  test_switch.gd  test_switch.gd.uid  test_track_manager_topology.gd  test_track_manager_topology.gd.uid  test_track_rendering_server.gd  test_track_rendering_server.gd.uid  test_train_battery.gd  test_train_battery.gd.uid  test_train_ep_fuse_switch.gd  test_train_ep_fuse_switch.gd.uid  test_train_position_signals.gd  test_train_position_signals.gd.uid  test_train_spring_brake.gd  test_train_spring_brake.gd.uid
demo/trainsets/: sm42_demo_trainset.tscn
demo/vehicles/: 401w.tres  401w.tscn  sm42_099.tscn
doc_classes/: ActionQueue.xml  CapabilityRegistry.xml  Component.xml  E3DModel.xml  E3DModelInstance.xml  E3DModelInstanceManager.xml  E3DModelLightDefinition.xml  E3DModelManager.xml  E3DModelNodesInstancer.xml  E3DModelTool.xml  E3DNodesInstancer.xml  E3DParser.xml  E3DResourceFormatLoader.xml  E3DSubModel.xml  Entity.xml  EntityNode.xml  EntityRegistry.xml  GameLog.xml  GenericTrainPart.xml  LayeredSoundResource.xml  LegacyBufferCouplerModule.xml  LightListItem.xml  LoadListItem.xml  LogSystem.xml  MaszynaMaterial.xml  MaszynaParser.xml  MaszynaTrianglesImporter.xml  MaterialManager.xml  MaterialParser.xml  MotorParameter.xml  OggVorbisFormatLoader.xml  ResourceCache.xml  SceneryTrianglesBuilder.xml  TrackManager.xml  TrackRenderer.xml  TrackRenderingServer.xml  TrainBrake.xml  TrainBuffCoupl.xml  TrainBuffer.xml  TrainCommand.xml  (+27 more)
docker-storage/: entrypoint.sh
docs/: architecture.md  index.md  track-rendering.md  trainsets.md
gdscripts/: powered_train_part.gd
scripts/: style-check  style-fix
src/: macros.hpp  register_types.cpp
src/brakes/: TrainBrake.cpp  TrainBrake.hpp  TrainElectroPneumaticDynamicBrake.cpp  TrainElectroPneumaticDynamicBrake.hpp  TrainSpringBrake.cpp  TrainSpringBrake.hpp
(+577 files in other folders)
